--- a/helm/charts/pluginsmanager/values.yaml
+++ b/helm/charts/pluginsmanager/values.yaml
@@ -8,9 +8,7 @@ global:
   pluginsmanager:
     data:
       operation: "upload"
-      SOURCE_REGISTRY: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com/tci
-      DOCKER_REGISTRY: reldocker.tibco.com
-
+      SOURCE_REGISTRY: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
 image:
   repository: ""
   pullPolicy: IfNotPresent
@@ -85,14 +83,14 @@ tolerations: []
 affinity: {}
 
 plugins:
-  tci-bw-plugin-acs:
-    tag: 6.0.0.v8.1-tci-2.0
+#  tci-bw-plugin-acs:
+#    tag: 6.0.0.v8.1-tci-2.0
 #  tci-bw-plugin-sharepoint:
 #    tag: 6.4.0.v7-tci-2.0
-#  tci-bw-plugin-googlepubsub:
-#    tag: 6.0.2.v6-tci-2.0
-#  tci-bw-plugin-sqs:
-#    tag: 6.5.2.v17-tci-2.0
+  tci-bw-plugin-googlepubsub:
+    tag: 6.0.2.v6-tci-2.0
+  tci-bw-plugin-sqs:
+    tag: 6.5.2.v17-tci-2.0
 #  tci-bw-plugin-smpp:
 #    tag: 6.0.3.v5-tci-2.0
 #  tci-bw-plugin-odata:
@@ -111,6 +109,13 @@ plugins:
 ingress:
   # -- Enables configuration of ingress to expose pluginsmanager. Requires ingress support in the Kubernetes cluster.
   enabled: false
+
+networkpolicy:
+  create: true
+  egress:
+      - to:
+          - ipBlock:
+              cidr: 0.0.0.0/0
 
 volumes:
   pluginsmanager:
