--- a/helm/recipe/cp-integration.yaml
+++ b/helm/recipe/cp-integration.yaml
@@ -1,250 +1,51 @@
 helmCharts:
-  - name: orchestrator
+  - name: pluginsmanager
     namespace: ${NAMESPACE}
     repository:
       git:
         host: https://github.com/sasahoo-tibco/tp-integration.git
-        path: /helm/charts/orchestrator
+        path: /helm/charts/pluginsmanager
         branch: ${BRANCH}
     values:
       - content: |
-          serviceAccount:
-            create: false
-            name: dp-integration-default
           global:
-            orchestrator:
+            pluginsmanager:
               data:
-                namspace: ${NAMESPACE}
-              image:
-                registry: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
-                tag: 2557-dp-integration
-          ingress:
-            annotations:
-              haproxy.org/cors-enable: "true"
-              haproxy.org/load-balance: leastconn
-              haproxy.org/src-ip-header: X-Real-IP
-              haproxy.org/timeout-http-request: 600s
-              ingress.kubernetes.io/rewrite-target: /
-              meta.helm.sh/release-name: orchestrator
-              meta.helm.sh/release-namespace: ${NAMESPACE}
-            className: ${INGRESS_CLASS}
-            enabled: true
-            hosts:
-            - host: ""
-              paths:
-              - path: /tibco/agent/integration/orchestrator/
-                pathType: Prefix
-
+                operation: "upload"
+                SOURCE_REGISTRY: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
+          plugins:
+            #  tci-bw-plugin-acs:
+            #    tag: 6.0.0.v8.1-tci-2.0
+            #  tci-bw-plugin-sharepoint:
+            #    tag: 6.4.0.v7-tci-2.0
+            tci-bw-plugin-googlepubsub:
+              tag: 6.0.2.v6-tci-2.0
+            tci-bw-plugin-sqs:
+              tag: 6.5.2.v17-tci-2.0
+                #  tci-bw-plugin-smpp:
+                #    tag: 6.0.3.v5-tci-2.0
+                #  tci-bw-plugin-odata:
+                #    tag: 6.5.0.v7-tci-2.0
+                #  tci-bw-plugin-oerp:
+                #    tag: 6.0.0.v11-tci-2.0
+                #  tci-bw-plugin-ibmi:
+                #    tag: 7.3.0.v6.2-tci-2.0
+                #  tci-bw-plugin-dataconversion:
+                #    tag: 4.7.0.v5.2-tci-2.0
+                #  tci-bw-plugin-mq:
+                #    tag: 8.8.2.v1.1-tci-2.0
+                #  tci-bw-plugin-bc:
+                #    tag: 6.3.1.v12.1-tci-2.0
+          networkpolicy:
+            create: true
+            egress:
+              - to:
+                  - ipBlock:
+                      cidr: 0.0.0.0/0
           volumes:
-            orchestrator:
-              persistentVolumeClaim:
-                create: true
-              storageClassName: "gp2"
-                resources:
-                  requests:
-                    storage: 8Gi
-              volumeName: ""
-              existingClaim: ""
-          config:
-            DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
-  - name: buildserver
-    namespace: ${NAMESPACE}
-    repository:
-      git:
-        host: https://github.com/sasahoo-tibco/tp-integration.git
-        path: /helm/charts/buildserver
-        branch: ${BRANCH}
-    values:
-      - content: |
-          serviceAccount:
-            create: false
-            name: dp-integration-default
-          global:
-            orchestrator:
-              data:
-                namspace: ${NAMESPACE}
-              image:
-                registry: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
-                tag: 2557-dp-integration
-          ingress:
-            annotations:
-              haproxy.org/cors-enable: "true"
-              haproxy.org/load-balance: leastconn
-              haproxy.org/src-ip-header: X-Real-IP
-              haproxy.org/timeout-http-request: 600s
-              ingress.kubernetes.io/rewrite-target: /
-              meta.helm.sh/release-name: buildserver
-              meta.helm.sh/release-namespace: ${NAMESPACE}
-            className: ${INGRESS_CLASS}
-            enabled: true
-            hosts:
-            - host: ""
-              paths:
-              - path: /tibco/agent/integration/buildserver/
-                pathType: Prefix
-
-          volumes:
-            buildserver:
-              persistentVolumeClaim:
-                create: true
-              storageClassName: "gp2"
-                resources:
-                  requests:
-                    storage: 8Gi
-              volumeName: ""
-              existingClaim: ""
-          config:
-            DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
-  - name: bwbuildserver
-    namespace: ${NAMESPACE}
-    repository:
-      git:
-        host: https://github.com/sasahoo-tibco/tp-integration.git
-        path: /helm/charts/bwbuildserver
-        branch: ${BRANCH}
-    values:
-      - content: |
-          serviceAccount:
-            create: false
-            name: dp-integration-default
-          global:
-            orchestrator:
-              data:
-                namspace: ${NAMESPACE}
-              image:
-                registry: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
-                tag: 2557-dp-integration
-          ingress:
-            annotations:
-              haproxy.org/cors-enable: "true"
-              haproxy.org/load-balance: leastconn
-              haproxy.org/src-ip-header: X-Real-IP
-              haproxy.org/timeout-http-request: 600s
-              ingress.kubernetes.io/rewrite-target: /
-              meta.helm.sh/release-name: bwbuildserver
-              meta.helm.sh/release-namespace: ${NAMESPACE}
-            className: ${INGRESS_CLASS}
-            enabled: true
-            hosts:
-            - host: ""
-              paths:
-              - path: /tibco/agent/integration/bwbuildserver/
-                pathType: Prefix
-
-          volumes:
-            bwbuildserver:
-              persistentVolumeClaim:
-                create: true
-              storageClassName: "gp2"
-                resources:
-                  requests:
-                    storage: 8Gi
-              volumeName: ""
-              existingClaim: ""
-          config:
-            DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
-  - name: flogobuildserver
-    namespace: ${NAMESPACE}
-    repository:
-      git:
-        host: https://github.com/sasahoo-tibco/tp-integration.git
-        path: /helm/charts/flogobuildserver
-        branch: ${BRANCH}
-    values:
-      - content: |
-          serviceAccount:
-            create: false
-            name: dp-integration-default
-          global:
-            orchestrator:
-              data:
-                namspace: ${NAMESPACE}
-              image:
-                registry: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
-                tag: 2557-dp-integration
-          ingress:
-            annotations:
-              haproxy.org/cors-enable: "true"
-              haproxy.org/load-balance: leastconn
-              haproxy.org/src-ip-header: X-Real-IP
-              haproxy.org/timeout-http-request: 600s
-              ingress.kubernetes.io/rewrite-target: /
-              meta.helm.sh/release-name: flogobuildserver
-              meta.helm.sh/release-namespace: ${NAMESPACE}
-            className: ${INGRESS_CLASS}
-            enabled: true
-            hosts:
-            - host: ""
-              paths:
-              - path: /tibco/agent/integration/flogobuildserver/
-                pathType: Prefix
-
-          volumes:
-            flogobuildserver:
-              persistentVolumeClaim:
-                create: true
-              storageClassName: "gp2"
-                resources:
-                  requests:
-                    storage: 8Gi
-              volumeName: ""
-              existingClaim: ""
-          config:
-            DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
-  - name: apiserver
-    namespace: ${NAMESPACE}
-    repository:
-      git:
-        host: https://github.com/sasahoo-tibco/tp-integration.git
-        path: /helm/charts/apiserver
-        branch: ${BRANCH}
-    values:
-      - content: |
-          serviceAccount:
-            create: false
-            name: dp-integration-default
-          global:
-            orchestrator:
-              data:
-                namspace: ${NAMESPACE}
-              image:
-                registry: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
-                tag: 2557-dp-integration
-          ingress:
-            annotations:
-              haproxy.org/cors-enable: "true"
-              haproxy.org/load-balance: leastconn
-              haproxy.org/src-ip-header: X-Real-IP
-              haproxy.org/timeout-http-request: 600s
-              ingress.kubernetes.io/rewrite-target: /
-              meta.helm.sh/release-name: apiserver
-              meta.helm.sh/release-namespace: ${NAMESPACE}
-            className: ${INGRESS_CLASS}
-            enabled: true
-            hosts:
-            - host: ""
-              paths:
-              - path: /tibco/agent/integration/apiserver/
-                pathType: Prefix
-          ingressExternal:
-            annotations:
-              haproxy.org/cors-enable: "true"
-              haproxy.org/load-balance: leastconn
-              haproxy.org/src-ip-header: X-Real-IP
-              haproxy.org/timeout-http-request: 600s
-              ingress.kubernetes.io/rewrite-target: /
-              meta.helm.sh/release-name: apiserver
-              meta.helm.sh/release-namespace: ${NAMESPACE}
-            className: ${INGRESS_CLASS}
-            enabled: true
-            hosts:
-            - host: "test.tci-env.ap-southeast-2.tcie.pro"
-              paths:
-              - path: /
-                pathType: Prefix
-
-          config:
-            DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
+            pluginsmanager:
+              # recommended efs volume claim
+              existingClaim: "test-cp-integration-fs-store-claim"
     flags:
       install: true
       createNamespace: true
