update chart values and prepare recipe

--- a/helm/charts/pluginsdownloader/templates/job.yaml
+++ b/helm/charts/pluginsdownloader/templates/job.yaml
@@ -30,7 +30,7 @@ spec:
       containers:
       {{- range $name, $plugin := .Values.plugins }}
       - name: {{ $name }}-image-downloader
-        image: nginx
+        image: {{ .Values.images.repository }}:{{ .Values.images.tag }}
         imagePullPolicy: Always
         command:
           - "bin/bash"
