--- a/helm/charts/orchestrator/values.yaml
+++ b/helm/charts/orchestrator/values.yaml
@@ -24,6 +24,8 @@ global:
         resources: {}
 
 replicaCount: 1
+instanceId: default
+dataplaneId: default
 
 image:
   repository: tci/tci-orchestrator
