--- a/helm/charts/bwprovisioner/values.yaml
+++ b/helm/charts/bwprovisioner/values.yaml
@@ -4,8 +4,8 @@
 
 global:
   cp:
-    dataplaneId: default
-    instanceId: default
+    dataplaneId: defaultDpId
+    instanceId: defaultInstId
   bwprovisioner:
     data:
       namespace: dp-integration-default
@@ -63,8 +63,8 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 7813
-  targetPort: 7813
+  port: 7814
+  targetPort: 7814
 
 #ingress:
 #  enabled: false
@@ -81,13 +81,15 @@ service:
 
 ingress:
   # -- Enables configuration of ingress to expose bwprovisioner. Requires ingress support in the Kubernetes cluster.
-  enabled: false
-  ingressClassName: haproxy-dp-dp1
-  hosts:
-    - host: ""
-      paths:
-        - path: /tibco/agent/integration/bwprovisioner/
-          pathType: Prefix
+  enabled: true
+  ingressClassName: haproxy
+  hostsOverride: false
+  hosts: {}
+#  hosts:
+#    - host: ""
+#      paths:
+#        - path: /
+#          pathType: Prefix
   # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
   annotations: {}
   tls: []
@@ -166,7 +168,8 @@ extraInitContainers: []
 #   command: ['echo', "hey"]
 
 config:
-  DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
+  #  DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
+  DP_INTERNAL_URL: "***NOT AVAILABLE***"
 
 volumes:
   bwprovisioner:
