--- a/helm/charts/apiserver/values.yaml
+++ b/helm/charts/apiserver/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 global:
   cp:
-    dataplaneId: default
-    instanceId: default
+    dataplaneId: defaultDpId
+    instanceId: defaultInstId
   apiserver:
     data:
       namespace: dp-integration-default
@@ -54,8 +54,8 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 7813
-  targetPort: 7813
+  port: 7815
+  targetPort: 7815
 #ingress:
 #  enabled: false
 #  annotations: {}
@@ -70,17 +70,20 @@ service:
 #  #      - chart-example.local
 
 config:
-  DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
+#  DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
+  DP_INTERNAL_URL: "***NOT AVAILABLE***"
 
 ingress:
   # -- Enables configuration of ingress to expose apiserver. Requires ingress support in the Kubernetes cluster.
-  enabled: false
-  ingressClassName: haproxy-dp-dp1
-  hosts:
-    - host: ""
-      paths:
-        - path: /tibco/agent/integration/apiserver/
-          pathType: Prefix
+  enabled: true
+  ingressClassName: haproxy
+  hostsOverride: false
+  hosts: {}
+#  hosts:
+#    - host: ""
+#      paths:
+#        - path: /tibco/agent/integration/$instanceid/apiserver/
+#          pathType: Prefix
   # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
   annotations: {}
   tls: []
