--- a/helm/charts/apiserver/values.yaml
+++ b/helm/charts/apiserver/values.yaml
@@ -9,8 +9,8 @@ global:
     data:
       namespace: dp-integration-default
     image:
-      registry: 664529841144.dkr.ecr.ap-southeast-2.amazonaws.com
-      tag: 2557-dp-integration
+      registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
+      tag: 6-m1-ext
     logging:
       image:
         enabled: false
@@ -76,9 +76,13 @@ config:
 ingress:
   # -- Enables configuration of ingress to expose apiserver. Requires ingress support in the Kubernetes cluster.
   enabled: true
-  ingressClassName: haproxy
   hostsOverride: false
-  hosts: {}
+  className: haproxy
+  hosts:
+    - host: ""
+      paths:
+        - path: /
+          pathType: Prefix
 #  hosts:
 #    - host: ""
 #      paths:
